[gd_scene load_steps=4 format=3 uid="uid://c2j54imxixw3u"]

[ext_resource type="Script" uid="uid://bqaiehvkoco4t" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://c3rwpq1xjblk8" path="res://scenes/player.tscn" id="2_sugp2"]
[ext_resource type="Script" uid="uid://dkwr2fik7nvdw" path="res://scripts/chat.gd" id="3_sugp2"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")
player_scene = ExtResource("2_sugp2")

[node name="JoinButton" type="Button" parent="."]
offset_left = 10.0
offset_top = 1803.0
offset_right = 230.0
offset_bottom = 1903.0
text = "Join"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://c3rwpq1xjblk8")
spawn_path = NodePath("..")

[node name="Chat" type="Node2D" parent="."]
position = Vector2(10, 584)
script = ExtResource("3_sugp2")

[node name="MessageTextEdit" type="TextEdit" parent="Chat"]
offset_top = 1056.0
offset_right = 1060.0
offset_bottom = 1207.0
placeholder_text = "Enter message"

[node name="SendButton" type="Button" parent="Chat"]
offset_left = 837.0
offset_top = 1219.0
offset_right = 1057.0
offset_bottom = 1319.0
text = "Send"

[node name="ConnectionLabel" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = 1565.0
offset_right = 630.0
offset_bottom = 1618.0
grow_vertical = 2
size_flags_horizontal = 0
text = "Ready."

[node name="VersionLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 907.0
offset_top = 25.0
offset_right = 1051.0
offset_bottom = 78.0
grow_horizontal = 0
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 1, 1, 0.25098)
text = "vX.X.X"

[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Chat/SendButton" to="Chat" method="_on_send_button_pressed"]
